--- a/shipper/Dockerfile
+++ b/shipper/Dockerfile
@@ -1,9 +1,23 @@
-FROM python:3.9
+# For more information, please refer to https://aka.ms/vscode-docker-python
+FROM python:3.11
 
-COPY ./requirements.txt /.
-RUN pip install -r ./requirements.txt
+# Keeps Python from generating .pyc files in the container
+ENV PYTHONDONTWRITEBYTECODE=1
 
-COPY . /opt/shipper
-WORKDIR /opt/shipper
+# Turns off buffering for easier container logging
+ENV PYTHONUNBUFFERED=1
 
+# Install pip requirements
+COPY requirements.txt .
+RUN python -m pip install -r requirements.txt
+
+WORKDIR /app
+COPY . /app
+
+# Creates a non-root user with an explicit UID and adds permission to access the /app folder
+# For more info, please refer to https://aka.ms/vscode-docker-python-configure-containers
+RUN adduser -u 5678 --disabled-password --gecos "" appuser && chown -R appuser /app
+USER appuser
+
+# During debugging, this entry point will be overridden. For more information, please refer to https://aka.ms/vscode-docker-python-debug
 CMD ["python", "shipper.py"]
