--- a/shipper/requirements.txt
+++ b/shipper/requirements.txt
@@ -1,3 +1,4 @@
+# To ensure app dependencies are ported from your virtual environment/host machine into your container, run 'pip freeze > requirements.txt' in the terminal to overwrite this file
 click
-f1-2020-telemetry
-influxdb
+f1-23-telemetry
+influxdb_client
