--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     volumes:
       - ./shipper:/apt
     ports:
-      - 20777:20777
+      - 20777:20777/udp
 
   grafana:
     image: grafana/grafana
