--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,22 +12,33 @@ services:
       - .env
 
   grafana:
-    image: grafana/grafana
+    image: grafana/grafana:10.4.2
     volumes:
       - grafana_data:/var/lib/grafana
     ports:
       - 3000:3000
 
-  influxdb:
-    image: influxdb
-    ports:
-      - 8086:8086
+  mongo:
+    image: mongo
+    restart: always
+    volumes:
+      - mongo_data:/data/db
     environment:
-      - DOCKER_INFLUXDB_INIT_MODE=upgrade
-      - DOCKER_INFLUXDB_INIT_USERNAME=my-user
-      - DOCKER_INFLUXDB_INIT_PASSWORD=my-password
-      - DOCKER_INFLUXDB_INIT_ORG=my-org
-      - DOCKER_INFLUXDB_INIT_BUCKET=my-bucket
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
+
+
+  mongo-express:
+    image: mongo-express
+    restart: always
+    ports:
+      - 8081:8081
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: example
+      ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
+      ME_CONFIG_BASICAUTH: false
 
 volumes:
   grafana_data:
+  mongo_data:
